k8s/portfolio/deployment.yaml
# cd /home/dmitriy/project/k8s/portfolio && kubectl apply -f deployment.yaml

apiVersion: v1
kind: Namespace
metadata:
  name: portfolio
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-ru
  namespace: portfolio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio-ru
  template:
    metadata:
      labels:
        app: portfolio-ru
    spec:
      containers:
      - name: portfolio-ru
        image: wayofdt/portfolio-ru:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: portfolio-ru-service
  namespace: portfolio
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: portfolio-ru
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-ru-ingress
  namespace: portfolio
  # annotations:
    # nginx.ingress.kubernetes.io/ssl-redirect: "false"  # Отключение принудительного перехода на SSL
    # nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - portfolio-ru.wayofdt.com
    secretName: secret-tls
  rules:
  - host: portfolio-ru.wayofdt.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: portfolio-ru-service
            port:
              number: 80
